[tool.poetry]
name = "default_app"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "requests" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.3"
gunicorn = "^20.1.0"
requests = "^2.28.1"
Flask-DB2 = "^0.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
